# hermes-mission-control

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  seed_minimal.py  swarm_server.py  test_dynamic_agents.py  test_swarm.py
dashboard/: index.html
deploy/: agent-teams.service
docs/: deploy-vps.md  getting-started.md
landing/: index.html
scripts/: release-dryrun.sh
swarm_server/: agent.py  browser_pool.py  cli.py  config.py  prompts.py  tools.py
swarm_test_environment/: agents_config.json
teams_server/: __init__.py  __main__.py  agent.py  browser_gui_tools.py  browser_pool.py  browser_stream.py  budget.py  cli.py  config.py  credentials.py  cron.py  hermes_compat.py  loop_detector.py  master.py  model_config.py  monitoring.py  prompts.py  queue.py  server.py  summarizer.py  tools.py  update_check.py  web_crawl4ai.py  websocket.py
tests/: test_auth.py  test_browser_gui.py  test_browser_stream.py  test_budget.py  test_compaction.py  test_costs_endpoint.py  test_cron_fixes.py  test_cron_oneshot_and_recall.py  test_dynamic_agents.py  test_hermes_compat.py  test_human.py  test_lifecycle.py  test_master_agent.py  test_model_routing.py  test_race_conditions.py  test_robustness.py  test_run_fixes.py  test_set_model.py  test_supervisor_sweep.py  test_teams.py  test_token_aging.py  test_tool_injection.py  test_web_fallback.py
