[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams"
version = "0.4.2"
description = "P2P multi-agent teams server with a real-time dashboard, powered by the Hermes agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pradhyun" }]
keywords = ["agents", "multi-agent", "teams", "llm", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pyyaml",
    "pydantic",
    "aiosqlite",
    "ddgs",
    # The agent runtime each teams member runs. [all] pulls the browser/web/file
    # toolsets the teams relies on. Pinned to the floor that has the interrupt()
    # API + the progress callbacks the live-execution view uses.
    "hermes-agent[all]>=0.15.2",
]

[project.optional-dependencies]
# JS-rendering web fetch for the zero-config web_extract fallback (see
# teams_server/web_crawl4ai.py). Without it, the fallback still works via httpx
# (a core dep) — fine for server-rendered pages, but single-page apps that need
# a real browser to paint their content come back empty. Install with
# `pip install agent-teams[web]` and run `playwright install chromium`. Only
# used when the user hasn't configured a Hermes extract backend (firecrawl/
# tavily/exa/…), which always takes precedence.
web = ["crawl4ai"]

[project.scripts]
agent-teams = "teams_server.cli:main"

[project.urls]
Homepage = "https://github.com/CyberTron957/agent-teams"
Repository = "https://github.com/CyberTron957/agent-teams"
Issues = "https://github.com/CyberTron957/agent-teams/issues"

[tool.setuptools]
packages = ["teams_server"]

# Ship the static dashboard. Resolved at runtime by config._resolve_dashboard_dir
# (it probes this share/ location for pip installs).
[tool.setuptools.data-files]
"share/agent-teams/dashboard" = ["dashboard/index.html"]
